[gd_scene load_steps=4 format=3 uid="uid://guoohqlkvwre"]

[ext_resource type="Script" path="res://Levels/0. Main Menu/Main Menu.gd" id="1_dqx78"]

[sub_resource type="LabelSettings" id="LabelSettings_7xv1h"]
font_size = 60
shadow_color = Color(0, 0, 0, 0.509804)

[sub_resource type="LabelSettings" id="LabelSettings_mhmxo"]
shadow_color = Color(0, 0, 0, 0.509804)

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dqx78")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VB_MainMenu" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 439.0
offset_top = 334.0
offset_right = 648.0
offset_bottom = 505.0

[node name="Button_Play" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "Play"

[node name="Button_CaEditor" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "Campaign Editor"

[node name="Button_Quit" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 208.0
offset_top = 30.0
offset_right = 889.0
offset_bottom = 116.0
text = "A Grand Strategy Game"
label_settings = SubResource("LabelSettings_7xv1h")

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 1037.0
offset_top = 587.0
offset_right = 1147.0
offset_bottom = 645.0
text = "Good Solution
Interactive"
label_settings = SubResource("LabelSettings_mhmxo")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(1850, 1300)
zoom = Vector2(0.5, 0.5)

[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_Play" to="." method="_on_button_play_button_up"]
[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_CaEditor" to="." method="_on_button_ca_editor_button_up"]
[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_Quit" to="." method="_on_button_quit_button_up"]
